--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/libs/styles.min.css" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
+    />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
